# dotfiles

./: .cursorrules  .cursorsettings  .gitignore  .gitignore.real  README.md  backup.py  bootstrap.py  config.py  package-lock.json  package.json  plan.md  pyproject.toml  restore.py  wipe.py
backups/consolidate-markdown/main/20250226-171717/cursor/: cursor-tools.mdc
backups/consolidate-markdown/main/20250226-171717/git/: .gitignore
backups/consolidate-markdown/main/20250226-171717/vscode/: settings.json
backups/consolidate-markdown/main/20250301-133309/cursor/: consolidate-markdown.mdc
backups/consolidate-markdown/windsurf/: .windsurfrules
backups/mutedeck-raycast-extension/git/: .gitignore
backups/mutedeck-raycast-extension/windsurf/: .windsurfrules
docs/: desgin.md  design.md  plan.md  prd.md
legacy/: backup.py  bootstrap.py  config.py  restore.py  wipe.py
legacy/backups_archive/consolidate-markdown/git/: .gitignore
rules/: ai_commands.rules  documentation.rules  filesystem.rules  git.rules  package.rules  planning.rules  python.rules  structure.rules  testing.rules  vision.rules
src/dotfiles/: __init__.py  cli.py
src/dotfiles/core/: __init__.py  backup.py  bootstrap.py  branch.py  commands.py  config.py  logging.py  migrate.py  repository.py  restore.py  wipe.py  zip_export.py
tests/: __init__.py  conftest.py  test_backup.py  test_backup_restore.py  test_bootstrap.py  test_branch.py  test_commands.py  test_config.py  test_migrate.py  test_repository.py  test_restore.py  test_wipe.py  test_zip_export.py
(+10 files in other folders)
